fix(status_bar): wrong font size for language selector text

--- a/apps/client/src/widgets/layout/StatusBar.css
+++ b/apps/client/src/widgets/layout/StatusBar.css
@@ -27,7 +27,7 @@
                 align-items: center;
                 border: 0;
 
-                span {
+                span:first-of-type {
                     font-size: 1rem;
                 }
 
